--- a/web/themes/custom/typhoon/src/tailwind/tailwind.css
+++ b/web/themes/custom/typhoon/src/tailwind/tailwind.css
@@ -22,6 +22,7 @@
 
 html {
   scroll-behavior: smooth;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
 body {
